Exposing-VM-Services/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-clusterip
  namespace: default
  labels:
    app: web-server
spec:
  type: ClusterIP
  selector:
    kubevirt.io/vm: web-server-vm
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
