Exposing-VM-Services/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-nodeport
  namespace: default
  labels:
    app: web-server
spec:
  type: NodePort
  selector:
    kubevirt.io/vm: web-server-vm
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
