Exposing-VM-Services/http-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-server-route
  namespace: default
  labels:
    app: web-server
spec:
  to:
    kind: Service
    name: web-server-clusterip
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
